# openAI

./: README.md  pyproject.toml  tempCodeRunnerFile.javascript
openai/: __init__.py  prompts.MD
tests/: text_generation.py  vision.py
